// Original file: exa/code_edit/code_edit_pb/code_edit.proto

export const IntentType = {
  INTENT_TYPE_UNSPECIFIED: 'INTENT_TYPE_UNSPECIFIED',
  INTENT_TYPE_COMMIT_GOAL: 'INTENT_TYPE_COMMIT_GOAL',
  INTENT_TYPE_DIFF_SEARCH: 'INTENT_TYPE_DIFF_SEARCH',
  INTENT_TYPE_CLEAN_COMMIT: 'INTENT_TYPE_CLEAN_COMMIT',
  INTENT_TYPE_CCI_SIGNATURE_SEARCH: 'INTENT_TYPE_CCI_SIGNATURE_SEARCH',
  INTENT_TYPE_CCI_RAW_SOURCE_SEARCH: 'INTENT_TYPE_CCI_RAW_SOURCE_SEARCH',
} as const;

export type IntentType =
  | 'INTENT_TYPE_UNSPECIFIED'
  | 0
  | 'INTENT_TYPE_COMMIT_GOAL'
  | 1
  | 'INTENT_TYPE_DIFF_SEARCH'
  | 2
  | 'INTENT_TYPE_CLEAN_COMMIT'
  | 3
  | 'INTENT_TYPE_CCI_SIGNATURE_SEARCH'
  | 4
  | 'INTENT_TYPE_CCI_RAW_SOURCE_SEARCH'
  | 5

export type IntentType__Output = typeof IntentType[keyof typeof IntentType]
