// Original file: exa/code_edit/code_edit_pb/code_edit.proto

export const RelevanceReason = {
  RELEVANCE_REASON_UNSPECIFIED: 'RELEVANCE_REASON_UNSPECIFIED',
  RELEVANCE_REASON_SAME_COMMIT_OLD: 'RELEVANCE_REASON_SAME_COMMIT_OLD',
  RELEVANCE_REASON_SAME_COMMIT_NEW: 'RELEVANCE_REASON_SAME_COMMIT_NEW',
  RELEVANCE_REASON_REF_IN_DELETION: 'RELEVANCE_REASON_REF_IN_DELETION',
  RELEVANCE_REASON_REF_IN_INSERTION: 'RELEVANCE_REASON_REF_IN_INSERTION',
  RELEVANCE_REASON_NOT_RELEVANT: 'RELEVANCE_REASON_NOT_RELEVANT',
} as const;

export type RelevanceReason =
  | 'RELEVANCE_REASON_UNSPECIFIED'
  | 0
  | 'RELEVANCE_REASON_SAME_COMMIT_OLD'
  | 1
  | 'RELEVANCE_REASON_SAME_COMMIT_NEW'
  | 2
  | 'RELEVANCE_REASON_REF_IN_DELETION'
  | 3
  | 'RELEVANCE_REASON_REF_IN_INSERTION'
  | 4
  | 'RELEVANCE_REASON_NOT_RELEVANT'
  | 99

export type RelevanceReason__Output = typeof RelevanceReason[keyof typeof RelevanceReason]
