// Original file: exa/code_edit/code_edit_pb/code_edit.proto

import type { RetrieverType as _exa_code_edit_code_edit_pb_RetrieverType, RetrieverType__Output as _exa_code_edit_code_edit_pb_RetrieverType__Output } from '../../../exa/code_edit/code_edit_pb/RetrieverType';

export interface RetrieverInfo {
  'type'?: (_exa_code_edit_code_edit_pb_RetrieverType);
  'modelName'?: (string);
}

export interface RetrieverInfo__Output {
  'type': (_exa_code_edit_code_edit_pb_RetrieverType__Output);
  'modelName': (string);
}
