// Original file: exa/code_edit/code_edit_pb/code_edit.proto

export const RetrieverType = {
  RETRIEVER_TYPE_UNSPECIFIED: 'RETRIEVER_TYPE_UNSPECIFIED',
  RETRIEVER_TYPE_CONTEXT_MODULE_LOCAL: 'RETRIEVER_TYPE_CONTEXT_MODULE_LOCAL',
  RETRIEVER_TYPE_CONTEXT_MODULE_SEARCH: 'RETRIEVER_TYPE_CONTEXT_MODULE_SEARCH',
  RETRIEVER_TYPE_SEARCH: 'RETRIEVER_TYPE_SEARCH',
  RETRIEVER_TYPE_MQUERY_OPENAI: 'RETRIEVER_TYPE_MQUERY_OPENAI',
  RETRIEVER_TYPE_MQUERY_CODEIUM: 'RETRIEVER_TYPE_MQUERY_CODEIUM',
  RETRIEVER_TYPE_CONTEXT_MODULE_SEARCH_MQUERY_SCORER: 'RETRIEVER_TYPE_CONTEXT_MODULE_SEARCH_MQUERY_SCORER',
  RETRIEVER_TYPE_COMMIT_GRAPH: 'RETRIEVER_TYPE_COMMIT_GRAPH',
  RETRIEVER_TYPE_MORPH_NORMAL: 'RETRIEVER_TYPE_MORPH_NORMAL',
  RETRIEVER_TYPE_MORPH_ADVANCED: 'RETRIEVER_TYPE_MORPH_ADVANCED',
  RETRIEVER_TYPE_GRAPH_CLUSTERS: 'RETRIEVER_TYPE_GRAPH_CLUSTERS',
  RETRIEVER_TYPE_OPENSEARCH: 'RETRIEVER_TYPE_OPENSEARCH',
} as const;

export type RetrieverType =
  | 'RETRIEVER_TYPE_UNSPECIFIED'
  | 0
  | 'RETRIEVER_TYPE_CONTEXT_MODULE_LOCAL'
  | 1
  | 'RETRIEVER_TYPE_CONTEXT_MODULE_SEARCH'
  | 2
  | 'RETRIEVER_TYPE_SEARCH'
  | 3
  | 'RETRIEVER_TYPE_MQUERY_OPENAI'
  | 4
  | 'RETRIEVER_TYPE_MQUERY_CODEIUM'
  | 5
  | 'RETRIEVER_TYPE_CONTEXT_MODULE_SEARCH_MQUERY_SCORER'
  | 6
  | 'RETRIEVER_TYPE_COMMIT_GRAPH'
  | 7
  | 'RETRIEVER_TYPE_MORPH_NORMAL'
  | 8
  | 'RETRIEVER_TYPE_MORPH_ADVANCED'
  | 9
  | 'RETRIEVER_TYPE_GRAPH_CLUSTERS'
  | 10
  | 'RETRIEVER_TYPE_OPENSEARCH'
  | 11

export type RetrieverType__Output = typeof RetrieverType[keyof typeof RetrieverType]
